--- a/app_express/prueba/package.json
+++ b/app_express/prueba/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "mongodb": "^2.1.7",
+    "mongoose": "^4.4.6",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
